@@ -55,6 +55,8 @@ dpkg (1.10.16) unstable; urgency=low
   * Fix md5sum when handling large files.  Closes: #162691
   * Fix dpkg-checkbuilddeps calling of parsedep.  It wasn't setting
     use_arch.  Closes: #212796.
+  * Joey Hess <joeyh@debian.org>:
+    Change formatting of info.dir.  Closes: #167379.
 
  -- Adam Heath <doogie@debian.org>  Tue, 23 Sep 2003 12:12:38 -0500
 
