@@ -1,3 +1,7 @@
+Sat Oct 25 15:45:48 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/install-info.pl: Change formatting of info.dir.
+
 Sat Oct 25 15:04:41 CDT 2003 Adam Heath <doogie@debian.org>
 
   * lib/mlib.c, include/dpkg.h.in, utils/md5sum.c: Change limit and the
